--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Mantenimiento</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#333333" />
 </head>
 <body>
   <div contenteditable="true" class="editable-title">Titulo de Registro(toca para editar)</div>
@@ -54,5 +56,12 @@
   </label>
   </div>
   <script src="lista.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service Worker registered'))
+        .catch(err => console.error('Service Worker error:', err));
+    }
+  </script>
 </body>
 </html>
